output spacing fix with white-space:pre

--- a/src/components/output.css
+++ b/src/components/output.css
@@ -11,6 +11,7 @@ margin: auto;
 /* height: auto; */
 max-height: 600px;
 overflow: auto;
+white-space:pre;
 }
 
 a.exit {
